# hbc_tech_assessment

./: README.md  pyproject.toml
config/: config.yaml
data/311_requests/borough=BRONX/: 022c5f3602574b3f855f87586997033a-0.parquet  0240894f5f8f4f4ca6f499568d3c897c-0.parquet  024879632105435e90d53027012a22c1-0.parquet  02821e29b9c34f2f8a58ac173c4951ef-0.parquet  028690a6e6ca4bb3a495b75fabcaaa2a-0.parquet  029b0f2ab4744adab291f8c9f32a27c2-0.parquet  02c25f4004d04fb28d9280994786ec4f-0.parquet  033747d88daf4d6395bdbfe4bdc15734-0.parquet  0346d421ecc74f2a982c22f892743bc0-0.parquet  03ff182f0e83403983b32ca7f4fb2bdb-0.parquet  041843e07efd4ee2b080b5881d1dcfca-0.parquet  0428c702491e4e66815034f376a909b3-0.parquet  04dd73af2d934d96a14af6707e15723c-0.parquet  050685ae1fa7444d9042fa620a29a364-0.parquet  05068d5d2f324917ab602dd85526e8fb-0.parquet  05aad8004a9c47c7a54f82986d0f2f04-0.parquet  061c097194cc43f6a4388bdc28226783-0.parquet  06f8705244794bae9da76c64128fafad-0.parquet  0792cc5b64314bd3bf64b7604cee43e7-0.parquet  079954ec7ca04a5dbe62345c18336b9d-0.parquet  07ac480a34084acba142562d22b17174-0.parquet  088772864d644d76bab59a88cc0c1339-0.parquet  08c4c8bae73348af8af61022bbdec062-0.parquet  095cb541b2314e8fad3816edd48e99f8-0.parquet  0a5b970faedb430692bba285f3881123-0.parquet  0acf67f2df844d61a7cbba0a4c9f28c6-0.parquet  0b702f2957994430b102b99124eb4fc7-0.parquet  (+802 more)
docs/: methodology.md
notebooks/: ETL + EDA.html  ETL + EDA.ipynb  Final report.html  Final report.ipynb
src/eda/: classification_model.py  visualizations.py
src/etl/: db.py  nyc_311_api.py  utils.py
(+4145 files in other folders)
